# aoska

./: .editorconfig  .pritterignore  .pritterrc  eslint.config.js  generate.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/: index.toml  package_firefox.toml  package_gimp.toml  package_minecraft.toml  package_steam.toml  package_thunderbird.toml  package_vlc.toml  package_wechat.toml  recommend.toml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/mock_data/: aoska_index.json  recommend_index.json
src-tauri/src/: command.rs  lib.rs  main.rs
src-tauri/src/common/: config.rs  download_mgr.rs  index.rs  mod.rs  oma.rs  omactl.rs  packages.rs  repo_mgr.rs  utils.rs
src/assets/styles/: variables.css
src/components/AppPage/: AppHeader.vue
src/components/pages/: AppPage.vue  Category.vue  CategoryPage.vue  Creating.vue  Games.vue  Home.vue  HomePage.vue  UpdatePage.vue  Updates.vue  Video.vue  ViewAllPage.vue  Working.vue
src/components/pages/AppPage/: AppHeader.vue
src/components/pages/Updates/: UpdateItem.vue
src/components/share/: AppBanner.vue  AppCard.vue  Button.vue  CustomButton.vue  ImageCarousel.vue  NavBar.vue  Navbar.vue  SoftwareFlags.vue  SoftwareTip.vue  TipCard.vue  Update.vue  UpdateCard.vue  WelcomeCard.vue
src/locales/: en.json  index.ts  zh.json
src/router/: index.ts
src/stores/: cofig.ts
src/types/: home.ts  oma.ts  packages.ts
src/utils/: url.ts  wrapper.ts
